refact: Remove planet exploration
